Bug 257600 - Fix !ENABLE(ACCESSIBILITY) build following 264762@main
Summary: Fix !ENABLE(ACCESSIBILITY) build following 264762@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Ross Kirsling
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-06-01 02:56 PDT by Ross Kirsling
Modified: 2023-06-01 03:02 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ross Kirsling 2023-06-01 02:56:25 PDT
.
Comment 1 Ross Kirsling 2023-06-01 02:57:37 PDT
Pull request: https://github.com/WebKit/WebKit/pull/14582
Comment 2 EWS 2023-06-01 03:01:36 PDT
Committed 264790@main (4811e26fe93b): <https://commits.webkit.org/264790@main>

Reviewed commits have been landed. Closing PR #14582 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2023-06-01 03:02:17 PDT
<rdar://problem/110105323>