Fix !ENABLE(ACCESSIBILITY) build following 264762@main https://bugs.webkit.org/show_bug.cgi?id=257600

Unreviewed build fix.

* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::onScrollbarFrameRectChange):
Add missing stub.

Canonical link: https://commits.webkit.org/264790@main